--- a/main.css
+++ b/main.css
@@ -1,10 +1,46 @@
 #results {
-    height: 50vh;
-    width: auto;
-    overflow-y: scroll;
+    width: 100%;
+    position: relative;
+    flex-direction: column;
+    max-height: calc(75vh - 50px);
+    overflow-x: auto;
 }
 
-#results img {
-    margin: 1%
+#results > div {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 1%;
 }
 
+#results > div > img:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#results > div > img {
+    width: 100%;
+    height: 100%;
+    max-width: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+
+@media (min-width: 992px) {
+    #results > div  {
+        min-height: 180px;
+    }
+}
+
+@media (min-width: 768px) {
+    #results > div  {
+        min-height: 210px;
+    }
+}
+
+@media (max-width: 768px) {
+    #results > div {
+        height: 75%;
+    }
+}
