--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
     display: inline-block;
     vertical-align: middle;
     margin: 1%;
+    min-width: 240px;
 }
 
 #results > div > img:hover {
@@ -27,7 +28,7 @@
     object-fit: cover;
 }
 
-@media (min-width: 992px) {
+@media (max-width: 768px) {
     #results > div  {
         min-height: 180px;
     }
@@ -36,11 +37,5 @@
 @media (min-width: 768px) {
     #results > div  {
         min-height: 210px;
-    }
-}
-
-@media (max-width: 768px) {
-    #results > div {
-        height: 75%;
     }
 }
